--- a/cssplayground/index.html
+++ b/cssplayground/index.html
@@ -25,13 +25,15 @@
 
 <div class="myDiv">
 
-  <h2>wuzzgooooody</h2>
+  <h2>Creator of FreshwatercrabZ</h2>
+  <p><img class="crab" src="images/crabs.png" alt="crabs"> This is a 100% original project. Most people love it! Profits going to a good cause!</p>
 
   </div>
 
 
 <div class="yoDiv">
 <h3>we out here</h3>
+<img id="yup" src="images/yuppers.png" alt="yup">
 
   </div>
 
